# OmniKeymap

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  regenerate-databases.yml
artifacts/db-linux/: af+fa-olpc.json  af+ps-olpc.json  af+ps.json  af+uz-olpc.json  af+uz.json  af.json  al+plisi.json  al+veqilharxhi.json  al.json  am+eastern-alt.json  am+eastern.json  am+phonetic-alt.json  am+phonetic.json  am+western.json  am.json  ara+azerty.json  ara+azerty_digits.json  ara+buckwalter.json  ara+digits.json  ara+mac-phonetic.json  ara+mac.json  ara+olpc.json  ara.json  at+mac.json  at+nodeadkeys.json  at.json  au.json  az+cyrillic.json  az.json  ba+alternatequotes.json  ba+unicode.json  ba+unicodeus.json  ba+us.json  ba.json  bd+probhat.json  bd.json  be+iso-alternate.json  be+nodeadkeys.json  be+oss.json  be+oss_latin9.json  (+553 more)
artifacts/db-macos/: 2SetHangul.json  390Hangul.json  ABC-AZERTY.json  ABC-India.json  ABC-QWERTZ.json  ABC.json  AfghanDari.json  AfghanPashto.json  Akan.json  Anjal.json  Apache.json  Arabic-AZERTY.json  Arabic.json  Armenian-HMQWERTY.json  Austrian.json  Azeri.json  Belgian.json  Bodo.json  Brazilian.json  British.json  Bulgarian-Phonetic.json  Byelorussian.json  Canadian-CSA.json  Canadian.json  CanadianFrench-PC.json  CangjieKeyboard.json  Cherokee-Nation.json  Cherokee-QWERTY.json  Chickasaw.json  Chochenyo.json  Chuvash.json  Colemak.json  Croatian-PC.json  Czech-QWERTY.json  Czech.json  DVORAK-QWERTYCMD.json  Danish.json  Dhivehi-QWERTY.json  Dogri.json  Dvorak-Left.json  (+154 more)
artifacts/db-windows/: 00000401.json  00000402.json  00000404.json  00000405.json  00000406.json  00000408.json  0000040A.json  0000040B.json  0000040C.json  0000040D.json  0000040F.json  00000410.json  00000411.json  00000412.json  00000413.json  00000414.json  00000415.json  00000416.json  00000418.json  00000419.json  0000041A.json  0000041B.json  0000041D.json  0000041E.json  0000041F.json  00000423.json  (+139 more)
docs/: book.toml
omni-keymap-core/: Cargo.toml
omni-keymap-core/src/: lib.rs
omni-keymap-extract/: Cargo.toml
omni-keymap-extract/src/: android.rs  batch.rs  linux.rs  macos.rs  main.rs  w3c_keys.rs  windows.rs
(+933 files in other folders)
