[workspace]
resolver = "2"
members = [
    "omni-keymap-core",
    "omni-keymap-extract",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OmniKeymap Contributors"]
repository = "https://github.com/nilp0inter/OmniKeymap"
homepage = "https://github.com/nilp0inter/OmniKeymap"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }