[package]
name = "omni-keymap-core"
description = "Library for loading the OmniKeymap JSON layout database and performing layout-aware character-to-keystroke lookups."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"